--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+    "pytest>=8.3.5",
+]
 
 [project.urls]
 Homepage = "https://github.com/YOUR_USERNAME/strictprotocol"
