fix type inference

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "strictprotocol"
-version = "0.1.0"
+version = "0.1.1"
 description = "A stricter Protocol enforcement for Python"
 authors = [{name = "Michael Afmokt", email = "michael@esacca.com"}]
 license = "MIT"
@@ -23,3 +23,6 @@ classifiers = [
 Homepage = "https://github.com/afmkt/strictprotocol"
 Repository = "https://github.com/afmkt/strictprotocol"
 Issues = "https://github.com/afmkt/strictprotocol/issues"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
